2007-10-09  Akim Demaille  <demaille@gostai.com>

	Fix tests.
	Update tests.
	* share/urbi/urbi.u: Remove debug instructions.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	urbi.u is born.
	* src/object/object-class.cc (object_class_init): No longer
	create inherit and disinherit messages.
	* share/urbi/urbi.u (Object.slotCopy): New.
	(Object.inherit, Object.disinherit): New.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	More doxumentation.
	* src/parser/uparser.hh: here.

2007-10-09  Akim Demaille  <demaille@gostai.com>

	Comment changes.
	* src/uconnection.cc: Move some doxumentation to...
	* include/kernel/uconnection.hh: here.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	.
	* include/kernel/userver.hh, src/userver.cc (load_init_file): New.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	: in URBI_PATH.
	If someone can do more elegantly, I buy.
	* src/console.cc (ConsoleServer::ConsoleServer): Split the URBI_PATH.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	slot_get in depth.
	* src/object/object.hh, src/object/object.cc, src/object/object.hxx
	(lookup): Rename as...
	(slot_get): this.
	* src/object/object-class.cc (object_class_getSlot): Use it.
	* src/runner/runner.cc: Adjust.
	Add a couple of assertions.

	* Makefile.am: Ship and install urbi.u.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	urbi.u.
	* share/urbi/urbi.u: New.
	* src/userver.cc (initialize): Load it.
	(find_file): More traces.
	For some reason, failures are ignored: calls to "error"
	here go to void.  This is annoying.  To be fixed.
	(URBI_BUFSIZ): Useless.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	Learn the alphabet.
	* src/runner/runner.cc: I is after F.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	Cleanup.
	* src/runner/runner.cc: Sort functions.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	Tests suite failures.
	* tests-local.mk: Pass -k2 to uconsole-check.

2007-10-08  Akim Demaille  <demaille@gostai.com>

	Kill Matthieu Notag.